--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,16 @@ alabaster==0.7.12
 attrs==20.2.0
 Babel==2.8.0
 backcall==0.2.0
+bleach==3.2.1
 certifi==2020.6.20
+cffi==1.14.3
 chardet==3.0.4
+cloudpickle==1.6.0
+colorama==0.4.3
+cryptography==3.1.1
 decorator==4.4.2
 docutils==0.16
+doit==0.33.1
 frozendict==1.2
 idna==2.10
 imagesize==1.2.0
@@ -13,23 +19,32 @@ iniconfig==1.0.1
 ipython==7.18.1
 ipython-genutils==0.2.0
 jedi==0.17.2
+jeepney==0.4.3
 Jinja2==2.11.2
+keyring==21.4.0
 MarkupSafe==1.1.1
 packaging==20.4
 parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
+pkginfo==1.5.0.1
 pluggy==0.13.1
 pockets==0.9.1
 prompt-toolkit==3.0.7
 ptyprocess==0.6.0
 py==1.9.0
+pycparser==2.20
 Pygments==2.7.1
+pyinotify==0.9.6
 pyparsing==2.4.7
 pytest==6.1.1
 pytz==2020.1
+readme-renderer==26.0
 requests==2.24.0
--e git+git@github.com:ZlatSic/ruly.git@57fd5f18fc4fab3fce58201da574a7669b01b76f#egg=ruly
+requests-toolbelt==0.9.1
+rfc3986==1.4.0
+ruly==0.0.3
+SecretStorage==3.1.2
 six==1.15.0
 snowballstemmer==2.0.0
 Sphinx==3.2.1
@@ -43,6 +58,9 @@ sphinxcontrib-programoutput==0.16
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
 toml==0.10.1
+tqdm==4.50.1
 traitlets==5.0.4
+twine==3.2.0
 urllib3==1.25.10
 wcwidth==0.2.5
+webencodings==0.5.1
