--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,37 @@
+alabaster==0.7.12
 attrs==21.2.0
+Babel==2.9.1
+certifi==2020.12.5
+chardet==4.0.0
 cloudpickle==1.6.0
+docutils==0.17.1
 doit==0.33.1
+idna==2.10
+imagesize==1.2.0
 iniconfig==1.1.1
+Jinja2==3.0.1
+MarkupSafe==2.0.1
 packaging==20.9
 pluggy==0.13.1
+pockets==0.9.1
 py==1.10.0
+Pygments==2.9.0
 pyinotify==0.9.6
 pyparsing==2.4.7
 pytest==6.2.4
+pytz==2021.1
+requests==2.25.1
 ruly==0.0.4
+six==1.16.0
+snowballstemmer==2.1.0
+Sphinx==4.0.2
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-napoleon==0.7
+sphinxcontrib-programoutput==0.17
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
 toml==0.10.2
+urllib3==1.26.4
